Added check for valid test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,24 +13,24 @@ set(COLT_EXECUTABLE_NAME colt)
 
 # Create the compiler executable
 add_executable(${COLT_EXECUTABLE_NAME}
-	${ColtHeaders} ${ColtUnits}
+  ${ColtHeaders} ${ColtUnits}
 )
 
 # Add precompiled header
 target_precompile_headers(${COLT_EXECUTABLE_NAME} PUBLIC 
-	"$<$<COMPILE_LANGUAGE:CXX>:${PROJECT_SOURCE_DIR}/src/util/colt_pch.h>")
+  "$<$<COMPILE_LANGUAGE:CXX>:${PROJECT_SOURCE_DIR}/src/util/colt_pch.h>")
 
 # Define COLT_DEBUG_BUILD for debug config
 target_compile_definitions(
-	${COLT_EXECUTABLE_NAME} PRIVATE $<$<CONFIG:DEBUG>:COLT_DEBUG>
+  ${COLT_EXECUTABLE_NAME} PRIVATE $<$<CONFIG:DEBUG>:COLT_DEBUG>
 )
 
 # Set default build type to Release
 set(CMAKE_BUILD_TYPE "Release")
 if (MSVC)
-	# The executable is the startup project in Visual Studio
-	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${COLT_EXECUTABLE_NAME})
-	target_compile_options(${COLT_EXECUTABLE_NAME} PUBLIC "/external:anglebrackets" "/external:W0")
+  # The executable is the startup project in Visual Studio
+  set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${COLT_EXECUTABLE_NAME})
+  target_compile_options(${COLT_EXECUTABLE_NAME} PUBLIC "/external:anglebrackets" "/external:W0")
 endif()
 
 # include {fmt}
@@ -39,10 +39,10 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/libraries/fmt")
 target_link_libraries(${COLT_EXECUTABLE_NAME} PUBLIC fmt::fmt)
 
 target_include_directories(${COLT_EXECUTABLE_NAME} PUBLIC 
-	"${CMAKE_SOURCE_DIR}/src"
-	"${CMAKE_SOURCE_DIR}/libraries/colt-structs/include"
-	SYSTEM # So no warning is shown
-	"${CMAKE_SOURCE_DIR}/libraries/fmt/include"
+  "${CMAKE_SOURCE_DIR}/src"
+  "${CMAKE_SOURCE_DIR}/libraries/colt-structs/include"
+  SYSTEM # So no warning is shown
+  "${CMAKE_SOURCE_DIR}/libraries/fmt/include"
 )
 
 # Useful macros for knowing which compiler is going to compile the code
@@ -52,13 +52,13 @@ set(IMPL_COLT_INTEL 0)
 set(IMPL_COLT_MSVC 0)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang") # AppleClang or Clang
-	set(IMPL_COLT_CLANG 1)
+  set(IMPL_COLT_CLANG 1)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-	set(IMPL_COLT_GNU 1)
+  set(IMPL_COLT_GNU 1)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-	set(IMPL_COLT_INTEL 1)
+  set(IMPL_COLT_INTEL 1)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-	set(IMPL_COLT_MSVC 1)
+  set(IMPL_COLT_MSVC 1)
 endif()
 
 set(IMPL_COLT_OS_WINDOWS 0)
@@ -66,20 +66,20 @@ set(IMPL_COLT_OS_LINUX 0)
 set(IMPL_COLT_OS_APPLE 0)
 
 if(WIN32)
-	set(IMPL_COLT_OS_WINDOWS 1)
-	set(IMPL_COLT_OS_STRING "Windows")
+  set(IMPL_COLT_OS_WINDOWS 1)
+  set(IMPL_COLT_OS_STRING "Windows")
 elseif(APPLE)
-	set(IMPL_COLT_OS_APPLE 1)
-	set(IMPL_COLT_OS_STRING "Apple")
+  set(IMPL_COLT_OS_APPLE 1)
+  set(IMPL_COLT_OS_STRING "Apple")
 elseif(UNIX AND NOT APPLE) #LINUX
-	set(IMPL_COLT_OS_LINUX 1)
-	set(IMPL_COLT_OS_STRING "Linux")
+  set(IMPL_COLT_OS_LINUX 1)
+  set(IMPL_COLT_OS_STRING "Linux")
 else()
-	set(IMPL_COLT_OS_STRING "UNKNOWN")
+  set(IMPL_COLT_OS_STRING "UNKNOWN")
 endif()
 
 configure_file("${CMAKE_SOURCE_DIR}/resources/cmake/cmake_colt_config.in"
-	"${CMAKE_SOURCE_DIR}/src/util/colt_config.h")
+  "${CMAKE_SOURCE_DIR}/src/util/colt_config.h")
 
 # DOXYGEN
 option(BUILD_DOC "Build documentation" ON)
@@ -88,22 +88,22 @@ message(STATUS "Searching for Doxygen executable...")
 # check if Doxygen is installed
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
-	message(STATUS "Found Doxygen executable.")
-	# set input and output files
-	set(DOXYGEN_IN ${CMAKE_SOURCE_DIR}/resources/doxygen/Doxyfile.in)
-	set(DOXYGEN_OUT ${CMAKE_SOURCE_DIR}/docs/Doxyfile.out)
+  message(STATUS "Found Doxygen executable.")
+  # set input and output files
+  set(DOXYGEN_IN ${CMAKE_SOURCE_DIR}/resources/doxygen/Doxyfile.in)
+  set(DOXYGEN_OUT ${CMAKE_SOURCE_DIR}/docs/Doxyfile.out)
 
-	message(STATUS "Configuring Doxygen input file...")
-	# request to configure the file
-	configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT})
+  message(STATUS "Configuring Doxygen input file...")
+  # request to configure the file
+  configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT})
 
-	add_custom_target(GENERATE_DOCS
-		COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-		COMMENT "Generating API documentation with Doxygen"
-		VERBATIM)
+  add_custom_target(GENERATE_DOCS
+    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    COMMENT "Generating API documentation with Doxygen"
+    VERBATIM)
 else (DOXYGEN_FOUND)
-	message(WARNING "Doxygen was not found! Doxygen need to be installed to generate the documentation!")
+  message(WARNING "Doxygen was not found! Doxygen need to be installed to generate the documentation!")
 endif (DOXYGEN_FOUND)
 
 message(STATUS "Searching for tests...")
@@ -122,36 +122,41 @@ enable_testing()
 # which gives the regex to test the output of interpreting
 # the file against.
 foreach(testPath ${ColtTestsPath})
-	# Read all the lines of the file
-	file(STRINGS ${testPath} testLines)
-	# Store the first line
-	list(GET testLines 0 firstLine)
-	# Pop the 2 first characters which are //
-	string(REPLACE "//" "" RegexTest ${firstLine})
-	# Strip new lines from end of line
-	string(REGEX REPLACE "\n$" "" RegexTest "${RegexTest}")
+  # Read all the lines of the file
+  file(STRINGS ${testPath} testLines)
+  # Store the first line
+  list(GET testLines 0 firstLine)
+  
+  # Get test name
+  get_filename_component(testName ${testPath} NAME_WE)
 
-	# Get test name
-	get_filename_component(testName ${testPath} NAME_WE)
-	
-	# Get folder before test name
-	get_filename_component(testFolder_temp "${testPath}/.." ABSOLUTE)
-	
-	# Get position of last '/'
-	string(FIND "${testFolder_temp}" "/" testFolderNameBegin REVERSE)
-	# Increment past '/'
-	MATH(EXPR testFolderNameBegin "${testFolderNameBegin}+1")
-	# Obtain the last directory name by striping the part before the last '/'
-	string(SUBSTRING "${testFolder_temp}" "${testFolderNameBegin}" "-1" testFolderName)
-	# Replace any spaces in the directory name by an '_'
-	string(REPLACE " " "_" testFolderName "${testFolderName}")
-	
-	string(TOUPPER ${testName} testName)
-	string(TOUPPER ${testFolderName} testFolderName)
-	# Example of name: resources/tests/syntax/binary.ct -> SYNTAX_BINARY
-	set(testName "${testFolderName}_${testName}")
+  if (NOT "${firstLine}" MATCHES "//*")
+    message(SEND_ERROR "Test '${testName}.ct' should begin with a '//' followed by the Regex to check for!")
+  endif()
 
-	# Create test
-	add_test(NAME "${testName}" COMMAND ${COLT_EXECUTABLE_NAME} -C ${testPath})
-	set_property(TEST ${testName} PROPERTY PASS_REGULAR_EXPRESSION ${RegexTest})
+  # Pop the 2 first characters which are //
+  string(REPLACE "//" "" RegexTest ${firstLine})
+  # Strip new lines from end of line
+  string(REGEX REPLACE "\n$" "" RegexTest "${RegexTest}")  
+  
+  # Get folder before test name
+  get_filename_component(testFolder_temp "${testPath}/.." ABSOLUTE)
+  
+  # Get position of last '/'
+  string(FIND "${testFolder_temp}" "/" testFolderNameBegin REVERSE)
+  # Increment past '/'
+  MATH(EXPR testFolderNameBegin "${testFolderNameBegin}+1")
+  # Obtain the last directory name by striping the part before the last '/'
+  string(SUBSTRING "${testFolder_temp}" "${testFolderNameBegin}" "-1" testFolderName)
+  # Replace any spaces in the directory name by an '_'
+  string(REPLACE " " "_" testFolderName "${testFolderName}")
+  
+  string(TOUPPER ${testName} testName)
+  string(TOUPPER ${testFolderName} testFolderName)
+  # Example of name: resources/tests/syntax/binary.ct -> SYNTAX_BINARY
+  set(testName "${testFolderName}_${testName}")
+
+  # Create test
+  add_test(NAME "${testName}" COMMAND ${COLT_EXECUTABLE_NAME} -C ${testPath})
+  set_property(TEST ${testName} PROPERTY PASS_REGULAR_EXPRESSION ${RegexTest})
 endforeach()
