--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,11 @@ if (NOT ${testCount} EQUAL 0 AND ${ENUM_TESTS})
 endif()
 
 # Contains the additional arguments to pass to the executable when testing
-set(COLT_ADDITIONAL_ARGS -i -C -NW -r)
+# -i: Print IR
+# -C: No Color (so no weird behavior happens when regex matching)
+# --no-wait: Do not wait for user input before closing the app.
+# -r: Run 'main'
+set(COLT_ADDITIONAL_ARGS -i -C --no-wait -r)
 
 # TESTING:
 # Each file in resources/tests/ that ends with .ct
