--- a/resources/cmake/cmake_colt_config.in
+++ b/resources/cmake/cmake_colt_config.in
@@ -42,4 +42,11 @@
 	#define COLT_MSVC
 #endif
 
+#if defined(COLT_MSVC) && defined(COLT_DEBUG)
+  //FOR MEMORY LEAK DETECTION
+  #define _CRTDBG_MAP_ALLOC
+  #include <stdlib.h>
+  #include <crtdbg.h>
+#endif
+
 #endif //COLT_CONFIG
