--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,9 +120,9 @@ endif()
 # Contains the additional arguments to pass to the executable when testing
 # -i: Print IR
 # -C: No Color (so no weird behavior happens when regex matching)
-# --no-wait: Do not wait for user input before closing the app.
+# -no-wait: Do not wait for user input before closing the app.
 # -r: Run 'main'
-set(COLT_ADDITIONAL_ARGS -ir -C --no-wait -r)
+set(COLT_ADDITIONAL_ARGS -ir -C -no-wait -r)
 
 # TESTING:
 # Each file in resources/tests/ that ends with .ct
